use new http dependency to avoid jar building issues